feat(admin): make admin max capacacity transparent into admin peer count, edge node capacity, and max wireguard peers
